<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.ForgotPasswordActivity">

    <com.bigb.bigblood.components.CustomTextView
        android:id="@+id/title_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/forgot_password_title"
        android:layout_marginTop="@dimen/_24sdp"
        android:textSize="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:font_name="AvenirHeavy"/>

    <com.bigb.bigblood.components.CustomTextView
        android:id="@+id/forgot_password_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="@string/forgot_password_des"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:gravity="center"
        app:font_name="AvenirLight"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_forgot_password"/>

    <com.bigb.bigblood.components.CustomTextView
        android:id="@+id/email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="@string/email_id"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_49sdp"
        android:layout_marginLeft="@dimen/_49sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_desc"/>

    <com.bigb.bigblood.components.CustomEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_49sdp"
        android:layout_marginStart="@dimen/_49sdp"
        android:inputType="textCapSentences"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_16sdp"
        android:theme="@style/LoginPageEditTextTheme"
        app:font_name="AvenirLight"
        android:maxLines="1"
        app:backgroundTint="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_id" />

    <com.bigb.bigblood.components.CustomButton
        android:id="@+id/resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_51sdp"
        android:layout_marginStart="@dimen/_51sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_bigb_login_button"
        android:minHeight="40dp"
        android:paddingBottom="@dimen/_7sdp"
        android:paddingTop="@dimen/_7sdp"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_24sdp"
        app:font_name="AvenirBook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>

</android.support.constraint.ConstraintLayout>